--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,26 @@
-
+@media (max-width: 991px){
+.banner-layer, .banner {
+    min-height: 590px;
+}
+}
 .banner-layer {
   background: url(./assets/blog.jpg);
   /* background: rgba(0, 0, 0, 0.5); */
 }
+.agile_banner_info h2 {
+  font-size: 73px;
+  letter-spacing: 1px;
+}
+.agile_banner_info h4 {
+  font-size: 40px;
+}
+.agile_banner_info p {
+  font-size: 16px;
+}
 
+.agile_banner_margin {
+  padding: 12em 0em 0em;
+}
 .landing-section {
   min-height: 765px;
   /* height: 100vh; */
@@ -151,6 +168,24 @@ h3.heading:after {
   left: 45%;
   bottom: -18%;
 }
+
+h3.heading1 {
+  font-size: 35px;
+  /* text-align: center; */
+  color: #333;
+  font-weight: 500;
+  letter-spacing: 5px;
+  position: relative;
+}
+/* h3.heading1:after {
+  position: absolute;
+  content: '';
+  width: 10%;
+  height: 3px;
+  background: #333;
+  left: 45%;
+  bottom: -18%;
+} */
 /* .wrapper {
   min-height: 100vh;
   background-color: green;
@@ -223,21 +258,21 @@ h3.heading:after {
   font-weight: 600;
   margin-bottom: 5px;
 }
-.contact-left p,.contact-left p a {
+.p, p a {
   margin: 0;
   line-height: 28px;
   letter-spacing: .5px;
   font-size: 15px;
   color: #666;
 }
-.contact-left p a:hover {
+ p a:hover {
   color: #000;
 }
 .icon i {
   font-size: 20px;
   color: #333;
 }
-.contact-right input[type="text"], .contact-right input[type="email"], .contact-right textarea {
+ input[type="text"], input[type="email"], textarea {
   outline: none;
   width: 83%;
   padding: .9em 1em;
@@ -250,7 +285,7 @@ h3.heading:after {
   margin-bottom: 1.5em;
 border-radius: 10px;
 }
-.contact-right input[type="submit"] {
+ input[type="submit"] {
   padding: 11px 35px;
   color: #fff;
   background: #222;
@@ -262,7 +297,7 @@ border: 2px solid #222;
   border-radius: 35px;
   float: right;
 }
-.contact-right input[type="submit"]:hover {
+ input[type="submit"]:hover {
   color: #222;
   background: none;
 border: 2px solid #222;
@@ -273,12 +308,23 @@ label {
   color: #333;
   font-weight: 600;
 }
-.contact-right textarea {
+ textarea {
   min-height: 120px;
   resize: none;
 }
 /*-- // contact --*/
 
+.pdf {
+  padding: 11px 35px;
+  color: #fff;
+  background: #333;
+  border: 2px solid #333;
+  font-weight: 600;
+  font-size: 15px;
+  letter-spacing: 1px;
+  display: inline-block;
+  border-radius: 35px;
+}
 
 
 
